--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -79,6 +79,11 @@ else
                 CFLAGS+= -std=c++11 -pthread $(CCOPT) $(TARGETARCH) -fdata-sections -ffunction-sections
                 LDFLAGS+= -s -Wl,--gc-sections
                 # LDSTATIC+= -static
+
+                ifdef ASAN
+                    CFLAGS += -fsanitize=address
+                    LDFLAGS += -fsanitize=address
+                endif
             endif
         endif
         ifeq ($(TARGETARCH),XuBlaze)
@@ -96,6 +101,12 @@ else
         CC=clang++
         LDFLAGS+= -dead_strip
         CFLAGS+= -pthread $(CCOPT) $(TARGETARCH) -fno-rtti -fno-exceptions -std=c++11
+
+        ifdef ASAN
+            LDFLAGS += -fsanitize=address
+            CFLAGS += -fsanitize=address
+        endif
+
         PROGRAM_DIR=/Applications/Vireo
     endif
 endif
